--- a/package.json
+++ b/package.json
@@ -447,6 +447,7 @@
 	"dependencies": {
 		"csv-stringify": "^6.2.0",
 		"debounce": "^1.2.0",
-		"escape-string-regexp": "^2.0.0"
+		"escape-string-regexp": "^2.0.0",
+		"minimatch": "^5.1.0"
 	}
 }
