change: make highlightColor optional
closes #141

--- a/package.json
+++ b/package.json
@@ -307,8 +307,7 @@
 					"additionalProperties": {
 						"type": "object",
 						"required": [
-							"scope",
-							"highlightColor"
+							"scope"
 						],
 						"properties": {
 							"enabled": {
