--- a/package.json
+++ b/package.json
@@ -392,6 +392,11 @@
 								"description": "The curvature radius of the applied border (Requires borderStyle to be set)",
 								"default": 0
 							},
+                            "ruler": {
+								"type": "boolean",
+								"default": true,
+								"description": "Sets whether the tag is rendered in ruler"
+							},
 							"isBold": {
 								"type": "boolean",
 								"description": "Sets whether the tag is rendered in bold",
