--- a/.eslintrc
+++ b/.eslintrc
@@ -3,12 +3,14 @@
     "parser": "@typescript-eslint/parser",
     "plugins": [
         "@typescript-eslint",
-        "unused-imports"
+        "unused-imports",
+        "unicorn"
     ],
     "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/eslint-recommended",
-        "plugin:@typescript-eslint/recommended"
+        "plugin:@typescript-eslint/recommended",
+        "plugin:unicorn/recommended"
     ],
     "rules": {
         "semi": 2,
@@ -23,7 +25,17 @@
 		"@typescript-eslint/no-var-requires": 0,
 		"@typescript-eslint/no-non-null-assertion": 0,
         "@typescript-eslint/indent": 2,
-        "@typescript-eslint/ban-types": 0
+        "@typescript-eslint/ban-types": 0,
+        "@typescript-eslint/ban-ts-comment": 0,
+        "unicorn/prevent-abbreviations": 0,
+        "unicorn/catch-error-name": [ 2, { "name": "err" }],
+        "unicorn/no-null": 0,
+        "unicorn/no-array-reduce": 0,
+        "unicorn/filename-case": 0,
+		"unicorn/prefer-ternary": 0,
+        "unicorn/prefer-module": 0,
+        "unicorn/no-useless-undefined": 0,
+        "unicorn/prefer-event-target": 0
     },
     "env": {
         "commonjs": true,
