--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
 				"title": "Go to next anchor",
 				"category": "Comment Anchors"
 			},
-            {
+			{
 				"command": "commentAnchors.navigateToAnchor",
 				"title": "Quick navigate to anchor",
 				"category": "Comment Anchors"
@@ -77,7 +77,7 @@
 				"when": "editorTextFocus",
 				"command": "commentAnchors.nextAnchor"
 			},
-            {
+			{
 				"key": "alt+c alt+l",
 				"when": "editorTextFocus",
 				"command": "commentAnchors.navigateToAnchor"
@@ -396,7 +396,7 @@
 								"type": "boolean",
 								"default": true,
 								"description": "Sets whether the tag is rendered in ruler"
-              },
+							},
 							"textDecorationStyle": {
 								"type": "string",
 								"description": "The style applied to the text-decoration, see https://www.w3schools.com/cssref/pr_text_text-decoration.php for more information"
@@ -496,20 +496,21 @@
 		"lint:fix": "eslint src --fix --ext .ts"
 	},
 	"devDependencies": {
-		"@types/debounce": "^1.0.0",
-		"@types/mocha": "^10.0.0",
-		"@types/node": "16.x",
-		"@types/vscode": "^1.66.0",
-		"@typescript-eslint/eslint-plugin": "^5.38.1",
-		"@typescript-eslint/parser": "^5.38.1",
-		"eslint": "^8.24.0",
-		"eslint-plugin-unused-imports": "^2.0.0",
-		"typescript": "^4.8.4"
+		"@types/debounce": "^1.2.4",
+		"@types/mocha": "^10.0.6",
+		"@types/node": "20.11.5",
+		"@types/vscode": "^1.85.0",
+		"@typescript-eslint/eslint-plugin": "^6.19.0",
+		"@typescript-eslint/parser": "^6.19.0",
+		"eslint": "^8.56.0",
+		"eslint-plugin-unicorn": "^50.0.1",
+		"eslint-plugin-unused-imports": "^3.0.0",
+		"typescript": "^5.3.3"
 	},
 	"dependencies": {
-		"csv-stringify": "^6.2.0",
-		"debounce": "^1.2.0",
-		"escape-string-regexp": "^2.0.0",
-		"minimatch": "^5.1.0"
+		"csv-stringify": "^6.4.5",
+		"debounce": "^2.0.0",
+		"escape-string-regexp": "^5.0.0",
+		"minimatch": "^9.0.3"
 	}
 }
