--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -20,6 +20,9 @@ jobs:
           node-version: 18
           cache: "yarn"
 
+      - name: Install dependencies
+        run: yarn install
+
       - name: Linting
         run: yarn lint
       
