--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
-		"target": "es2020",
+		"module": "Node16",
+		"target": "ES2022",
 		"outDir": "out",
-		"lib": ["ES2021"],
+		"lib": ["ES2022"],
 		"sourceMap": true,
 		"strict": true,
 		"rootDir": "src"
